--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "electron-quick-start-typescript",
+  "name": "pixiv-collector",
   "version": "1.0.0",
-  "description": "A minimal Electron application written with Typescript",
+  "description": "pixiv collector",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./dist/main.js"
   },
-  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "repository": "https://github.com/AlpsMonaco/pixiv-collector",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
-    "typescript"
+    "pixiv"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "AlpsMonaco",
+  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
