--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
-    }
+      "*": [
+        "node_modules/*"
+      ]
+    },
+    "strict": true
   },
   "include": [
     "src/**/*"
