git auto commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "root": true,
+  "parserOptions": { "project": "./tsconfig.json" },
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint"
@@ -8,5 +8,9 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-floating-promises": ["error"],
+    "@typescript-eslint/no-namespace": "off"
+  }
 }
