--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
       "dist/*.js"
     ]
   },
-  "main": "./dist/main.js"
+  "main": "./dist/main.js",
+  "dependencies": {
+    "axios": "^1.3.4"
+  }
 }
