--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "main": "./dist/main.js",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "sqlite3": "^5.1.4"
   }
 }
